[package]
name = "blockchain_api_rs"
version = "0.1.0"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
diesel-derive-enum = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4.11", features = ["serde"] }
rocket = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.8"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]
