[package]
name = "blockchain_api_rs"
version = "0.1.0"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.2", features = ["postgres", "chrono", "macros"] }
dotenv = "0.15.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
anyhow = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
