[package]
name = "blockchain_api_rs"
version = "0.1.0"
authors = ["Rahul Garg <rg@vihu.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch = "master", features = ["postgres", "chrono", "macros", "json"] }
dotenv = "0.15.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
anyhow = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tide = "0.13.0"
serde_json = "1.0.48"
